--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,34 @@
+body{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 14px;
+    margin: 0px;
+    border: 10px;
+    padding: 0px;
+    text-align: center;
+}
+
+
 .titulo{
-    color: red;
+    color: rgb(0, 0, 0);
+    font-size: 50px;
+    font-weight: bolder;
+    text-align: left;
+    background-color: rgb(0, 52, 89);
+    padding: 50px;
+    margin-bottom: 10px;
     }
 
 .subtitulo{
     color: rgb(15, 110, 121);
+    font-size: 25px;
 }
+
+.foto{
+    height: 300px;
+    width: 300px;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+   }
