--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,7 @@
 body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 14px;
-    margin: 0px;
+    margin: auto;
     border: 10px;
     padding: 0px;
     text-align: center;
@@ -13,9 +13,10 @@ body{
     font-size: 50px;
     font-weight: bolder;
     text-align: left;
-    background-color: rgb(0, 52, 89);
+    background-color: rgb(106, 183, 238);
     padding: 50px;
     margin-bottom: 10px;
+    text-transform: uppercase;
     }
 
 .subtitulo{
@@ -31,4 +32,5 @@ body{
 img {
     max-width: 100%;
     max-height: 100%;
+    object-position: right;
    }
